@@ -2,8 +2,16 @@
 # --------------------
 # Code common to the use of an installed or shipped libport.
 AC_DEFUN([_URBI_LIBPORT_COMMON],
-[AC_REQUIRE([URBI_PTHREAD])dnl
-AC_REQUIRE([TC_HEADER_BOOST_1_34])dnl
+[
+# Check for Boost headers
+AX_BOOST_BASE([1.34])
+# Check for Boost.Thread
+AX_BOOST_THREAD([1.34])
+if test "x$BOOST_THREAD_LIB" = "x"; then
+   echo "Sorry, we need the Boost.Thread library from Boost."
+   echo "Please install from http://www.boost.org"
+   exit 1
+fi
 
 # Where we install the libport files.
 URBI_PACKAGE_KIND_SWITCH(
